--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,6 +10,12 @@ jobs:
   # Cargo check.
   check:
     runs-on: ubuntu-latest
+    env:
+      SOCKS5_HOST: ${{ secrets.SOCKS5_HOST }}
+      SOCKS5_PORT: ${{ secrets.SOCKS5_PORT }}
+      SOCKS5_USERNAME: ${{ secrets.SOCKS5_USERNAME }}
+      SOCKS5_PASSWORD: ${{ secrets.SOCKS5_PASSWORD }}
+
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
