--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,5 @@ email_address="0.2.4"
 async-smtp = { version = "0.6.0", features = ["socks5"] }
 tokio = { version = "1", features = ["full"] }
 async-native-tls = { version = "0.4", default-features = false }
+regex = "1.9"
+lazy_static = "1.4"
