--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -17,6 +17,8 @@ jobs:
         target: [x86_64, x86, aarch64, armv7, s390x, ppc64le]
     steps:
       - uses: actions/checkout@v3
+      - name: Install OpenSSL
+        run: sudo apt-get update && sudo apt-get install -y libssl-dev
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
