--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -19,6 +19,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install OpenSSL
         run: sudo apt-get update && sudo apt-get install -y libssl-dev
+      - name: Set OPENSSL_DIR
+        run: echo "OPENSSL_DIR=/usr/include/openssl" >> $GITHUB_ENV
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
