--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -17,13 +17,17 @@ jobs:
         target: [x86_64, x86, aarch64, armv7, s390x, ppc64le]
     steps:
       - uses: actions/checkout@v3
-      - name: Install OpenSSL
+      - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libssl-dev
-      - name: Set PKG_CONFIG_PATH
+          sudo apt-get install -y libssl-dev gcc-powerpc64le-linux-gnu g++-powerpc64le-linux-gnu
+      - name: Configure environment for cross-compilation
         run: |
-          echo "PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig" >> $GITHUB_ENV
+          echo "CC=powerpc64le-linux-gnu-gcc" >> $GITHUB_ENV
+          echo "CXX=powerpc64le-linux-gnu-g++" >> $GITHUB_ENV
+          echo "AR=powerpc64le-linux-gnu-ar" >> $GITHUB_ENV
+          echo "CARGO_TARGET_PPC64LE_UNKNOWN_LINUX_GNU_LINKER=powerpc64le-linux-gnu-gcc" >> $GITHUB_ENV
+          echo "PKG_CONFIG_ALLOW_CROSS=1" >> $GITHUB_ENV
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
