--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -17,17 +17,6 @@ jobs:
         target: [x86_64, x86, aarch64, armv7, s390x, ppc64le]
     steps:
       - uses: actions/checkout@v3
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libssl-dev gcc-powerpc64le-linux-gnu g++-powerpc64le-linux-gnu
-      - name: Configure environment for cross-compilation
-        run: |
-          echo "CC=powerpc64le-linux-gnu-gcc" >> $GITHUB_ENV
-          echo "CXX=powerpc64le-linux-gnu-g++" >> $GITHUB_ENV
-          echo "AR=powerpc64le-linux-gnu-ar" >> $GITHUB_ENV
-          echo "CARGO_TARGET_PPC64LE_UNKNOWN_LINUX_GNU_LINKER=powerpc64le-linux-gnu-gcc" >> $GITHUB_ENV
-          echo "PKG_CONFIG_ALLOW_CROSS=1" >> $GITHUB_ENV
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
@@ -41,7 +30,7 @@ jobs:
       - name: Upload wheels
         uses: actions/upload-artifact@v3
         with:
-          name: wheels-${{ matrix.python-version }}-${{ matrix.target }}
+          name: dist
           path: dist
 
   windows:
@@ -65,7 +54,7 @@ jobs:
       - name: Upload wheels
         uses: actions/upload-artifact@v3
         with:
-          name: wheels-${{ matrix.python-version }}-${{ matrix.target }}
+          name: dist
           path: dist
 
   macos:
@@ -88,7 +77,7 @@ jobs:
       - name: Upload wheels
         uses: actions/upload-artifact@v3
         with:
-          name: wheels-${{ matrix.python-version }}-${{ matrix.target }}
+          name: dist
           path: dist
 
   sdist:
@@ -103,21 +92,22 @@ jobs:
       - name: Upload sdist
         uses: actions/upload-artifact@v3
         with:
-          name: wheels
+          name: dist
           path: dist
 
-  release:
+  release:  
     name: Release
     runs-on: ubuntu-latest
     needs: [linux, windows, macos, sdist]
     steps:
       - uses: actions/download-artifact@v3
         with:
-          name: wheels
+          name: dist
+          path: dist
       - name: Publish to PyPI
         uses: PyO3/maturin-action@v1
         env:
           MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
         with:
           command: upload
-          args: --skip-existing *
+          args: --skip-existing dist/*
