--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -20,6 +20,11 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install libssl-dev pkg-config
+
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
@@ -95,7 +100,7 @@ jobs:
           name: dist
           path: dist
 
-  release:  
+  release:
     name: Release
     runs-on: ubuntu-latest
     needs: [linux, windows, macos, sdist]
