--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -20,10 +20,36 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
+
+      - name: Install common dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install libssl-dev pkg-config
+          sudo apt-get install pkg-config
+
+      - name: Install dependencies for x86_64 and x86
+        if: matrix.target == 'x86_64' || matrix.target == 'x86'
+        run: sudo apt-get install libssl-dev
+
+      - name: Install dependencies for aarch64
+        if: matrix.target == 'aarch64'
+        run: sudo apt-get install libssl-dev:arm64
+
+      - name: Install dependencies for armv7
+        if: matrix.target == 'armv7'
+        run: sudo apt-get install libssl-dev:armhf
+
+      - name: Install dependencies for s390x
+        if: matrix.target == 's390x'
+        run: sudo apt-get install libssl-dev:s390x
+
+      - name: Install dependencies for ppc64le
+        if: matrix.target == 'ppc64le'
+        run: sudo apt-get install libssl-dev:ppc64el
+
+      - name: Set environment variables for OpenSSL (if necessary)
+        run: |
+          echo "OPENSSL_DIR=/usr/include/openssl" >> $GITHUB_ENV
+        if: matrix.target == 'ppc64le'
 
       - name: Build wheels
         uses: PyO3/maturin-action@v1
@@ -32,6 +58,7 @@ jobs:
           args: --release --out dist --find-interpreter
           sccache: "true"
           manylinux: auto
+
       - name: Upload wheels
         uses: actions/upload-artifact@v3
         with:
