--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -10,7 +10,7 @@ permissions:
 
 jobs:
   linux:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ["3.7", "3.8", "3.9", "3.10"]
@@ -23,7 +23,19 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install libudev-dev libssl-dev pkg-config
+          sudo apt-get install libssl-dev pkg-config
+
+      - name: Set PKG_CONFIG_PATH
+        run: |
+          OPENSSL_PC_PATH=$(find /usr -name 'openssl.pc')
+          if [ -n "$OPENSSL_PC_PATH" ]; then
+            PKG_CONFIG_DIR=$(dirname "$OPENSSL_PC_PATH")
+            echo "PKG_CONFIG_PATH set to $PKG_CONFIG_DIR"
+            export PKG_CONFIG_PATH=$PKG_CONFIG_DIR
+            echo "PKG_CONFIG_PATH=$PKG_CONFIG_PATH" >> $GITHUB_ENV
+          else
+            echo "openssl.pc not found"
+          fi
 
       - name: Build wheels
         uses: PyO3/maturin-action@v1
