--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ tokio = { version = "1", features = ["full"] }
 async-native-tls = { version = "0.4", default-features = false }
 regex = "1.9"
 lazy_static = "1.4"
+openssl = { version = "0.10", features = ["vendored"] }
